--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-/* * ABOVE IS FOR BOX MODEL ONLY */
+/* ! ABOVE IS FOR BOX MODEL ONLY */
 
 body
 {
@@ -31,14 +31,24 @@ body
     clear: both;
 }
 
+h3
+{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #778492;
+}
+
 /* ABOVE: universal settings */
 
 .header
 {
     background: #f5f5f5;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    /* padding-top: 10px; */
+    /* padding-bottom: 10px; */
+    padding: 30px 0;
+    height: auto;
+    width: auto;
 }
 
 .header .image-profile
@@ -59,15 +69,18 @@ body
     color: black;
     font-size: 38px;
     margin-bottom: 5px;
-    margin-top: 30px;
+    margin-top: 10px;
     position: relative;
 }
 
 .header .desc
 {
+    font-family: "Lato", arial, sans-serif;
     color: #778492;
     margin-bottom: 5px;
     margin-top: 5px;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 /* ABOVE: header */
@@ -163,13 +176,44 @@ a:hover, a:focus, a:active, a:visited, a:link
     margin-bottom: 20px;
 }
 
-.about-me-inner
+.inner
 {
     background: #fff;
     padding: 30px;
 }
 
-/* ABOVE: Primary Section */
+/* ABOVE: about me */
+
+.projects
+{
+    display: block;
+    margin-bottom: 20px;
+}
+
+.password-crack
+{
+    margin-bottom: 60px;
+    text-align: center;
+    box-sizing: border-box;
+    display: box;
+}
+
+.h3-title
+{
+    margin-bottom: 5px;
+    font-size: 20px
+
+}
+
+.caption
+{
+    margin-bottom: 30px;
+    color: #778492;
+}
+
+/* ABOVE: projects */
+
+/* ! ABOVE: Primary Section */
 
 .aside-info
 {
@@ -177,28 +221,53 @@ a:hover, a:focus, a:active, a:visited, a:link
     background: #fff;
     padding: 30px;
     padding-bottom: 0;
+    margin-bottom: 30px;
 }
 
-.contact-me
+.aside-info .section-inner
 {
     padding: 10px;
 }
 
-.h2-header
+.aside-info .section-inner .h2-header
 {
     margin-top: -5px;
 }
 
-.content
+.aside-info .section-inner .content
 {
     padding-bottom: -10px;
 }
 
-.about-me-icons
+.aside-info .section-inner .content .about-me-icons
 {
     margin-right: 10px;
     margin-bottom: 20px;
     font-size: 15px;
 }
 
-/* ABOVE: Secondary Section */
+.aside-info .section-inner .content .item
+{
+    margin-bottom: 30px;
+}
+
+.aside-info .section-inner .content .title
+{
+    display: inline;
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.aside-info .section-inner .content .university
+{
+    font-family: "Lato", arial, sans-serif;
+    font-size: 16px;
+    color: #999;
+    font-weight: 600;
+    padding-left: 25px;
+    margin-top: 5px;
+    margin-left: 6px;
+}
+
+/* ! ABOVE: Secondary Section */
