added more words and changed skill level

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container clearfix" style="margin-left: 20px; margin-right: 20px;">
-            <img class="image-profile pull-left" src="./resources/blank-profile.png"
+            <img class="image-profile pull-left" src="./resources/headshot.jpeg"
                 alt="placeholder for my profile picture">
 
             <div class="profile-content pull-left">
@@ -56,13 +56,10 @@
                         <div class="content" style="line-height: 150%;">
                             <!-- TODO: elaborate / write more -->
                             &emsp; I am a third year student studying data science and applied mathematics at the
-                            University of Michigan &ndash; Ann Arbor. My interest in web development began when I
-                            realized how limited Python and R is at displaying information.
+                            University of Michigan &ndash; Ann Arbor. I have developed an interest in web development when I realized how limited Python and R can be at displaying content you want. Both Python and R can at best produce 2-Dimensional plots. The canvas is practically infinite when one has access to web development.
 
                             <br> <br>
-                            &emsp; I have also picked up an interest in biology, specifically bioinformatics. My goal is
-                            to get a research position in either the biology or medical field with a primary focus in
-                            data and data anaylsis.
+                            &emsp; I have also picked up an interest in biology, specifically in bioinformatics. I intend to get a research position in either the biology or medical field with a strong focus in data and data anaylsis. My interest in these field is primarily microbiology and genomes. Obtaining a research position in a biology lab or developing software would be my secondary choice.
                         </div>
                     </div>
 
@@ -154,7 +151,7 @@
                         <div class="content">
                             <div class="skillset">
 
-                                <div class="item">
+                                {% comment %} <div class="item">
                                     <h3 class="skill-title">THIS BAR SHIT IS ASS.
                                         INSTEAD DO THIS</h3>
                                     <h3 class="skill-title">C++: WHAT THE FUCK I DID
@@ -163,7 +160,7 @@
                                     <h3 class="skill-title">Excel: Pivot Tables, etc..
                                     </h3>
                                     <br>
-                                </div>
+                                </div> {% endcomment %}
 
                                 {% for skill in skills %}
                                 <div class="item">
